# graphe

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: ROADMAP.md
graphs/: sample_directed.graphe  sample_tree.graphe  sample_undirected.graphe  showcase_directed.graphe
src/: dfs.c  dfs.h  graph.c  graph.h  graph_io.c  graph_io.h  layout.c  layout.h  main.c  platform_window.c  platform_window.h  render.c  render.h  traversal.c  traversal.h
tests/: graph_traversal_tests.c
